[CI] permissions (bis)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,9 @@ on:
     branches: ["main","master"]
 
 permissions:
+  contents: write
   id-token: write
-  
+
 jobs:
   call_env_workflow:
     uses: computorg/workflows/.github/workflows/global-env.yml@main
